--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -6,6 +6,7 @@
 
 .text-blue{
     color: rgb(2, 105, 173);
+    transition: all .5s;
 }
 
 .bg-blue {
@@ -46,3 +47,5 @@ body::-webkit-scrollbar {
     border-radius: 20px; 
     border: 3px solid  rgb(2, 105, 173);
   }
+
+  
